# SilverRetort

./: .gitignore  AGENTS.md  CLAUDE.md  PROGRESS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml
apps/hermes/: .dockerignore  .gitignore  Dockerfile  README.md  (+10 more)
apps/uvicorn/: artifact_bridge.py  artifact_contexts.py  artifact_modules.py  artifact_origin.py  bridge_client.py  db.py  engines.py  events.py  hermes_client.py  local_mcp_servers.py  main.py  managed_mcp_registry.py  mcp_server.py  mcp_tools.py  models.py  package.json  pyproject.toml  routes.py  runs.py  secret_store.py  stdio_mcp_client.py  switch_profiles.py  test_goal.py  test_local_mcp_servers.py  test_mcp_tools.py  test_workspace_port_artifact.py  test_workspace_templates.py  workspace_service.py  workspace_templates.py
apps/uvicorn/api_routes/: __init__.py  artifacts.py  chat.py  common.py  files.py  hermes.py  managed_mcp.py  proxy.py  system.py  workspaces.py
apps/uvicorn/data/: silverretort.db
doc/: react-artifact-evaluation.md  technical-architecture-slides.html
scripts/: artifact-runtime.ts  build-artifact-modules.mjs
skills/lerobot-serve/: .gitignore  SKILL.md  pyproject.toml
skills/lerobot-serve/agents/: openai.yaml
skills/lerobot-serve/scripts/: check_serve.ps1  lerobot_ros_robot.py  patch_moz01_usd.py  run_moz01.ps1  run_ros.ps1  serve.py
skills/lerobot-serve/scripts/moz01/: __init__.py  cartesian.py  control.py  pickup_pipeline.py  pickup_probe.py  render_trajectory.py  run_turn_knob.ps1  turn_knob_pipeline.py
skills/lerobot-serve/tests/: test_serve.py
template/: algorithm-research.json  antenna-design.json  industrial-design.json  structural-design.json
(+83 files in other folders)
