[project]
name = "silverretort-uvicorn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.51.0",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "mcp>=1.28.1",
]
